increase memory in integration tests...